[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_open_source"
version = "0.1.1"
authors = [
  { name="Robert Campbell", email="robert@coach-alliance.com" }
]
description = "this is a tutorial on how to build an open source project"
readme = "README.MD"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"